Completed JavaScript + HTML Challenge

--- a/code-challenges/HTML+JavaScriptMemeGeneratorChallenge/challenge/index.html
+++ b/code-challenges/HTML+JavaScriptMemeGeneratorChallenge/challenge/index.html
@@ -16,9 +16,13 @@
         <!-- Your HTML code goes here -->
         <h1 id = 'output'>OUTPUT</h1>
         <h3 id = 'meme'>Programmer Memes</h3>
+        <div id = 'showMeme' class = 'clear'></div>
         <h3 id = 'joke'>Tell Me Something Funny!</h3>
+        <div id = 'showJoke' class = 'clear'></div>
         <h3 id = 'wisdom'>Give Me Some Wisdom...</h3>
+        <div id = 'showQuote' class = 'clear'></div>
         <h3 id = 'riddle'>I Want A Riddle!</h3>
+        <div id = 'showRiddle' class = 'clear'></div>
       </section>
 
       <!-- No need to change anything in this section -->
